tests/test_enum/bad/missing_case.catala
## Article

```catala
new enum E:
  -- Case1 content int
  -- Case2 content bool
  -- Case3

new scope A:
  param e content E
  param out content bool

scope A:
  def out := match e with
    -- Case1 of i : i = 0
    -- Case2 of b : b
```
